datasets/dataset_txt/pipenv/pipenv_1540.txt
silasary commented on 22 Feb 2018 •
edited
My code contains the following snippit, which is valid syntax from python 3.6+
from typing import List

NAMES: List[str] = []
When running the script via pipenv run, I get a syntax error.
Describe your environment
Windows 10
Python version: Python 3.6.1
Pipenv version: pipenv, version 9.1.0
Expected result
Script runs correctly.
Actual result
$>pipenv run example.py
  File "<SNIP>\example.py", line 3
    NAMES: List[str] = []
         ^
SyntaxError: invalid syntax
Note that using pipenv shell then python example.py works correctly.
Steps to replicate
Create an empty 3.6 pipenv, and try to execute the following script:
from typing import List

NAMES: List[str] = []

print("It works!")
I have set up a repo as per the above steps here: https://github.com/silasary/pipenv_issue_1465